# inkcpp

./: .gitignore  CMakeLists.txt  build_ahf.bat  build_ahf.sh
inkcpp/: CMakeLists.txt  output.cpp  output.h  runner_impl.cpp  runner_impl.h  stack.cpp  stack.h  string_table.cpp  string_table.h  system.cpp  tree.cpp  tree.h  value.cpp  value.h
inkcpp/include/: runner.h  story.h
inkcpp_compiler/: json_compiler.cpp  json_compiler.h  reporter.cpp  reporter.h
inkcpp_compiler/include/: compilation_results.h
inkcpp_test/: CMakeLists.txt  Stack.cpp  Tags.cpp  Tree.cpp
inkcpp_test/ink/: AHF.ink  TagsStory2.ink
unreal/: CMakeLists.txt
